--- a/env/.env.dev
+++ b/env/.env.dev
@@ -3,6 +3,6 @@
 # Built-in environment variables
 TEAMSFX_ENV=dev
 APP_NAME_SUFFIX=dev
-AGENT_SCOPE=shared
+AGENT_SCOPE=personal
 
 # Generated during provision, you can also add your own variables.
